--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim error rem
-      quia consequatur velit laborum magnam quis deleniti ab accusamus?
-    </p>
+    <a class="link-arrow" href="#">Learn More</a>
   </body>
 </html>
