--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <title>Document</title>
   </head>
   <body>
-    <a class="link-arrow" href="#">Learn More</a>
+    <span class="badge badge--primary">10% off</span>
+    <span class="badge badge--secondary">10% off</span>
+    <span class="badge badge--primary badge--small">10% off</span>
   </body>
 </html>
