--- a/index.html
+++ b/index.html
@@ -1,17 +1,484 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
   <head>
-    <meta charset="UTF-8" />
+    <!-- prettier-ignore -->
+    <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <meta
+      name="description"
+      content="Deploy your website in less than 60 seconds."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- prettier-ignore-end -->
+
+    <title>Go online for just $9</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="nav collapsible">
+        <a href="/" class="nav__logo"
+          ><img src="images/logo.svg" alt="logo"
+        /></a>
+        <svg class="icon icon--white nav__toggler">
+          <use xlink:href="images/sprite.svg#menu"></use>
+        </svg>
+        <ul class="list nav__list collapsible__content">
+          <li class="nav__item">
+            <a href="#">Hosting</a>
+          </li>
+          <li class="nav__item">
+            <a href="#">VPS</a>
+          </li>
+          <li class="nav__item">
+            <a href="#">Domain</a>
+          </li>
+          <li class="nav__item">
+            <a href="#">Pricing</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <section class="block block--dark block--skewed-left hero">
+      <div class="grid grid--1x2 container">
+        <header class="block__header hero__content" data-aos="fade-right">
+          <h1 class="block__heading">Cloud Hosting for Pros</h1>
+          <p class="hero__tagline">
+            Deploy your website in less than 60 seconds.
+          </p>
+          <a href="#" class="btn btn--accent btn--streched">Get Started</a>
+        </header>
+        <picture data-aos="zoom-in">
+          <source
+            srcset="images/banner.webp 1x, images/banner@2x.webp 2x"
+            type="image/webp" />
+
+          <source
+            srcset="images/banner.png 1x, images/banner@2x.png 2x"
+            type="image/png" />
+
+          <img class="hero__image" src="images/banner.png" alt=""
+        /></picture>
+      </div>
+    </section>
+    <section class="block container" data-aos="fade-up">
+      <header class="block__header">
+        <h2>Starting at $10 per month</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde,
+          voluptate?
+        </p>
+      </header>
+      <div class="input-group domain__search">
+        <input type="text" class="input" placeholder="Enter domain name here" />
+        <button class="btn btn--accent">
+          <svg class="icon icon--white">
+            <use xlink:href="images/sprite.svg#search"></use>
+          </svg>
+          Search
+        </button>
+      </div>
+      <div class="grid domain__grid--3x3 domain__badge">
+        <span class="badge badge--secondary">.com $9 </span>
+        <span class="badge">.sg $10</span>
+        <span class="badge">.space $11</span>
+        <span class="badge">.info $14</span>
+        <span class="badge">.net %10</span>
+        <span class="badge">.xyz $10</span>
+      </div>
+    </section>
+    <section class="block container block-plan grid--1x3">
+      <div class="plan">
+        <div class="card card--secondary" data-aos="fade-right">
+          <header class="card__header">
+            <h3 class="plan__title">Entry</h3>
+            <span class="plan__pricing">$14</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--secondary badge--small">10% off</span>
+            <span class="plan__caption">Easy start on the cloud</span>
+          </header>
+          <div class="card__body">
+            <ul class="list list--tick">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">Unlimited Bandwidth</li>
+              <li class="list__item">100 GB SSD storage</li>
+              <li class="list__item">3 GB RAM</li>
+            </ul>
+            <button class="btn btn--outline btn--block">Buy Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="plan plan--popular">
+        <div class="card card--primary">
+          <header class="card__header">
+            <h3 class="plan__title">Entry</h3>
+            <span class="plan__pricing">$14</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--primary badge--small">10% off</span>
+            <span class="plan__caption">Easy start on the cloud</span>
+          </header>
+          <div class="card__body">
+            <ul class="list list--tick">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">Unlimited Bandwidth</li>
+              <li class="list__item">100 GB SSD storage</li>
+              <li class="list__item">3 GB RAM</li>
+            </ul>
+            <button class="btn btn--outline btn--block">Buy Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="plan">
+        <div class="card card--secondary" data-aos="fade-left">
+          <header class="card__header">
+            <h3 class="plan__title">Entry</h3>
+            <span class="plan__pricing">$14</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--secondary badge--small">10% off</span>
+            <span class="plan__caption">Easy start on the cloud</span>
+          </header>
+          <div class="card__body">
+            <ul class="list list--tick">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">Unlimited Bandwidth</li>
+              <li class="list__item">100 GB SSD storage</li>
+              <li class="list__item">3 GB RAM</li>
+            </ul>
+            <button class="btn btn--outline btn--block">Buy Now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">Host on the Cloud to Keep Growing</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto,
+          temporibus?
+        </p>
+      </header>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content" data-aos="fade-right">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Super easy to Use</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui tempora
+            ipsum, aspernatur incidunt nemo eos commodi modi officiis nisi
+            provident?
+          </p>
+          <a class="link-arrow" href="#">Learn More</a>
+        </div>
+        <picture data-aos="fade-left">
+          <source
+            srcset="images/easy@2x.webp 2x, images/easy.webp 1x"
+            type="image/webp"
+          />
+          <source
+            srcset="images/easy@2x.jpg 2x, images/easy.jpg 1x"
+            type="image/jpg"
+          />
+          <img
+            class="feature__image"
+            src="images/easy.jpg"
+            alt="Graphical data image"
+          />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content" data-aos="fade-up">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#computer"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Simply fast websites</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui tempora
+            ipsum, aspernatur incidunt nemo eos commodi modi officiis nisi
+            provident?
+          </p>
+          <a class="link-arrow" href="#">Learn More</a>
+        </div>
+        <picture data-aos="fade-down">
+          <source
+            srcset="images/fast@2x.webp 2x, images/fast.webp 1x"
+            type="image/webp"
+          />
+          <source
+            srcset="images/fast@2x.jpg 2x, images/fast.jpg 1x"
+            type="image/jpg"
+          />
+          <img
+            class="feature__image"
+            src="images/fast.jpg"
+            alt="Graphical data image"
+          />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content" data-aos="fade-up">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#wordpress"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Wordpress made easy</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui tempora
+            ipsum, aspernatur incidunt nemo eos commodi modi officiis nisi
+            provident?
+          </p>
+          <a class="link-arrow" href="#">Learn More</a>
+        </div>
+        <picture data-aos="fade-down">
+          <source
+            srcset="images/wordpress@2x.webp 2x, images/wordpress.webp 1x"
+            type="image/webp"
+          />
+          <source
+            srcset="images/wordpress@2x.jpg 2x, images/wordpress.jpg 1x"
+            type="image/jpg"
+          />
+          <img
+            class="feature__image"
+            src="images/wordpress.jpg"
+            alt="Graphical data image"
+          />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content" data-aos="zoom-in">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#clock"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">24/7 Expert Support</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui tempora
+            ipsum, aspernatur incidunt nemo eos commodi modi officiis nisi
+            provident?
+          </p>
+          <a class="link-arrow" href="#">Learn More</a>
+        </div>
+        <picture data-aos="zoom-out">
+          <source
+            srcset="images/support@2x.webp 2x, images/support.webp 1x"
+            type="image/webp"
+          />
+          <source
+            srcset="images/support@2x.jpg 2x, images/support.jpg 1x"
+            type="image/jpg"
+          />
+          <img
+            class="feature__image"
+            src="images/support.jpg"
+            alt="Graphical data image"
+          />
+        </picture>
+      </article>
+    </section>
+    <section class="block block--dark block--skewed-right">
+      <header class="block__header">
+        <h2>User-friendly Control Panel</h2>
+      </header>
+      <div class="container grid grid--1x2 showcase">
+        <picture class="showcase__image" data-aos="fade-right">
+          <source type="image/webp" srcset="images/ipad.webp" />
+          <source type="image/png" srcset="images/ipad.png" />
+          <img src="images/ipad.png" alt="ipad image" />
+        </picture>
+        <div class="showcase__content" data-aos="fade-up">
+          <div class="media">
+            <div class="media__image">
+              <svg class="icon icon--primary">
+                <use xlink:href="images/sprite.svg#snap"></use>
+              </svg>
+            </div>
+            <div class="media__body">
+              <h3 class="media__title">Easy Start & Managed Updates</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                alias tenetur autem nulla enim error eveniet nihil. Placeat,
+                odio totam?
+              </p>
+            </div>
+          </div>
+          <div class="media">
+            <div class="media__image">
+              <svg class="icon icon--primary">
+                <use xlink:href="images/sprite.svg#growth"></use>
+              </svg>
+            </div>
+            <div class="media__body">
+              <h3 class="media__title">Staging, GIT & WP-CLI</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Quibusdam nobis magni delectus recusandae dignissimos sunt
+                repellat maxime minus autem ducimus!
+              </p>
+            </div>
+          </div>
+          <div class="media">
+            <div class="media__image">
+              <svg class="icon icon--primary">
+                <use xlink:href="images/sprite.svg#wordpress"></use>
+              </svg>
+            </div>
+            <div class="media__body">
+              <h3 class="media__title">Dynamic Caching & More</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Dolorum quod officiis saepe excepturi, sit nulla eos. Nesciunt
+                officiis atque odit!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="block" data-aos="zoom-in">
+      <header class="block__header">
+        <h2>What our customers are saying</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi,
+          delectus.
+        </p>
+      </header>
+      <div class="container card testimonials">
+        <div class="grid grid--1x2">
+          <div class="testimonials__image-container">
+            <img
+              class="testimonials__image"
+              src="images/testimonial.jpg"
+              alt="A happy and smilling customer"
+            />
+            <span class="icon-container icon-container--accent">
+              <svg class="icon icon--small icon--white">
+                <use xlink:href="images/sprite.svg#quotes"></use>
+              </svg>
+            </span>
+          </div>
+          <blockquote class="quote">
+            <p class="quote__text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt
+              quis officiis rerum esse quisquam necessitatibus deleniti ducimus
+              odio mollitia, reiciendis veritatis itaque vero recusandae
+              quibusdam, porro voluptatibus ipsam ipsum illum!
+            </p>
+            <footer>
+              <div class="media">
+                <div class="media__image">
+                  <svg class="icon icon--primary quote__image">
+                    <use xlink:href="images/sprite.svg#line"></use>
+                  </svg>
+                </div>
+                <div class="media__body">
+                  <h3 class="media__title quote__author">John Smith</h3>
+                  <p class="quote__organization">ABC Company</p>
+                </div>
+              </div>
+            </footer>
+          </blockquote>
+        </div>
+      </div>
+    </section>
+    <section class="container callout callout--primary">
+      <div class="grid grid--1x2">
+        <div class="callout__content">
+          <h2 class="callout__heading">Ready to Get Started?</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+            provident et delectus perspiciatis odit ab aspernatur inventore
+            reprehenderit totam voluptatibus.
+          </p>
+        </div>
+        <a href="#" class="btn btn--secondary btn--streched">Get Started</a>
+      </div>
+    </section>
+    <footer class="block block--dark footer">
+      <div class="container grid footer__sections">
+        <section class="collapsible">
+          <div class="collapsible__header">
+            <h2 class="collapsible__heading">Products</h2>
+            <svg class="icon icon--white collapsible__icon">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Website Hosting</a></li>
+              <li><a href="#">Free Automated Wordpress</a></li>
+              <li><a href="#">Migrations</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible">
+          <div class="collapsible__header">
+            <h2 class="collapsible__heading">COMPANY</h2>
+            <svg class="icon icon--white collapsible__icon">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Affiliates</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible">
+          <div class="collapsible__header">
+            <h2 class="collapsible__heading">SUPPORT</h2>
+            <svg class="icon icon--white collapsible__icon">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Knowledge Base</a></li>
+              <li><a href="#">FAQ</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible">
+          <div class="collapsible__header">
+            <h2 class="collapsible__heading">DOMAINS</h2>
+            <svg class="icon icon--white collapsible__icon">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Domain Checker</a></li>
+              <li><a href="#">Domain Transfer</a></li>
+              <li><a href="#">Free Domain</a></li>
+            </ul>
+          </div>
+        </section>
+        <div class="footer__brand">
+          <img class="footer__logo" src="images/logo.png" alt="moshify logo" />
+          <p class="footer__copyright">Copyright 2023 Mosh Hamedani</p>
+        </div>
+      </div>
+    </footer>
+    <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  </body>
 </html>
