--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     </header>
     <section class="block block--dark block--skewed-left hero">
       <div class="grid grid--1x2 container">
-        <header class="block__header hero__content" data-aos="fade-right">
+        <header class="block__header hero__content">
           <h1 class="block__heading">Cloud Hosting for Pros</h1>
           <p class="hero__tagline">
             Deploy your website in less than 60 seconds.
           </p>
           <a href="#" class="btn btn--accent btn--streched">Get Started</a>
         </header>
-        <picture data-aos="zoom-in">
+        <picture>
           <source
             srcset="images/banner.webp 1x, images/banner@2x.webp 2x"
             type="image/webp" />
@@ -96,7 +96,7 @@
     </section>
     <section class="block container block-plan grid--1x3">
       <div class="plan">
-        <div class="card card--secondary" data-aos="fade-right">
+        <div class="card card--secondary">
           <header class="card__header">
             <h3 class="plan__title">Entry</h3>
             <span class="plan__pricing">$14</span>
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="plan">
-        <div class="card card--secondary" data-aos="fade-left">
+        <div class="card card--secondary">
           <header class="card__header">
             <h3 class="plan__title">Entry</h3>
             <span class="plan__pricing">$14</span>
@@ -165,7 +165,7 @@
         </p>
       </header>
       <article class="grid grid--1x2 feature">
-        <div class="feature__content" data-aos="fade-right">
+        <div class="feature__content" data-aos="fade-down">
           <span class="icon-container">
             <svg class="icon icon--primary">
               <use xlink:href="images/sprite.svg#easy"></use>
@@ -179,7 +179,7 @@
           </p>
           <a class="link-arrow" href="#">Learn More</a>
         </div>
-        <picture data-aos="fade-left">
+        <picture data-aos="fade-up">
           <source
             srcset="images/easy@2x.webp 2x, images/easy.webp 1x"
             type="image/webp"
@@ -258,7 +258,7 @@
         </picture>
       </article>
       <article class="grid grid--1x2 feature">
-        <div class="feature__content" data-aos="zoom-in">
+        <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
               <use xlink:href="images/sprite.svg#clock"></use>
@@ -272,7 +272,7 @@
           </p>
           <a class="link-arrow" href="#">Learn More</a>
         </div>
-        <picture data-aos="zoom-out">
+        <picture>
           <source
             srcset="images/support@2x.webp 2x, images/support.webp 1x"
             type="image/webp"
@@ -294,7 +294,7 @@
         <h2>User-friendly Control Panel</h2>
       </header>
       <div class="container grid grid--1x2 showcase">
-        <picture class="showcase__image" data-aos="fade-right">
+        <picture class="showcase__image">
           <source type="image/webp" srcset="images/ipad.webp" />
           <source type="image/png" srcset="images/ipad.png" />
           <img src="images/ipad.png" alt="ipad image" />
@@ -348,7 +348,7 @@
         </div>
       </div>
     </section>
-    <section class="block" data-aos="zoom-in">
+    <section class="block">
       <header class="block__header">
         <h2>What our customers are saying</h2>
         <p>
